homepage - fixed searchbox centering on smaller screen sizes

--- a/src/app/page-landing/header/header.component.css
+++ b/src/app/page-landing/header/header.component.css
@@ -25,12 +25,11 @@
   padding: 0.2em;
   box-shadow: 0px 0px 10px 10px #fdd;
   position: absolute;
-  top: 40vh;
+  /* top: 40vh; */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-
-/* .search-box{
-  position: relative;
-} */
 
 .header-searchbox {
   height: 3em;
